--- a/NukaCola.css
+++ b/NukaCola.css
@@ -80,7 +80,7 @@ nav img{
     background: #f44336;
     transition: 1s;
 }
-@media(max-width 700px){
+@media(max-width: 700px){
     .text-box h1{
         font-size: 20px;
     }
