--- a/Style.css
+++ b/Style.css
@@ -80,6 +80,9 @@ nav img{
     background: #f44336;
     transition: 1s;
 }
+nav .fa{
+    display: none;
+}
 @media(max-width: 700px){
     .text-box h1{
         font-size: 20px;
@@ -97,5 +100,10 @@ nav img{
         text-align: left;
         z-index: 2;
         
+    }
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
     }
 }
